Utilities/otbliblas/include/liblas/capi/liblas.h

typedef struct LASWriterHS *LASWriterH;
typedef struct LASReaderHS *LASReaderH;
typedef struct LASPointHS *LASPointH;
typedef struct LASHeaderHS *LASHeaderH;
typedef struct LASGuidHS *LASGuidH;
typedef struct LASVLRHS *LASVLRH;
#define LAS_MODE_WRITE 1
#define LAS_MODE_APPEND 2
/**
 * \todo to be documented
 */
typedef enum
{
    LE_None = 0,
    LE_Debug = 1,
    LE_Warning = 2,
    LE_Failure = 3,
    LE_Fatal = 4
} LASError;
/** Returns the number of variable length records in the header
 *  @param hHeader LASHeaderH instance
 *  @return the number of variable length records in the header
*/
LAS_DLL uint32_t LASHeader_GetRecordsCount(const LASHeaderH hHeader);
/** Sets the minimum values
 *  @param hHeader LASHeaderH instance
 *  @param x the x minimum
 *  @param y the y minimum
 *  @param z the z minimum
 *  @return LASError enum
*/
LAS_DLL LASError LASHeader_SetMin(LASHeaderH hHeader, double x, double y, double z);
/** Return the maximum x value
 *  @param hHeader LASHeaderH instance
 *  @return the maximum x value
*/
LAS_DLL double LASHeader_GetMaxX(const LASHeaderH hHeader);
/** Return the maximum y value
 *  @param hHeader LASHeaderH instance
 *  @return the maximum y value
*/
LAS_DLL double LASHeader_GetMaxY(const LASHeaderH hHeader);
/** Return the maximum z value
 *  @param hHeader LASHeaderH instance
 *  @return the maximum z value
*/
LAS_DLL double LASHeader_GetMaxZ(const LASHeaderH hHeader);
/** Sets the maximum values
 *  @param hHeader LASHeaderH instance
 *  @param x the x maximum
 *  @param y the y maximum
 *  @param z the z maximum
 *  @return LASError enum
*/
LAS_DLL LASError LASHeader_SetMax(LASHeaderH hHeader, double x, double y, double z);
/** Returns the proj.4 string describing the spatial reference of the 
 *  header if it is available
 *  @param hHeader LASHeaderH instance
 *  @return the proj.4 string or NULL if none is available.  The caller
 *  owns the string.
*/
LAS_DLL char* LASHeader_GetProj4(LASHeaderH hHeader);
/** Sets the proj4 stirng describing the spatial reference of the header.
 *  @param hHeader LASHeaderH instance
 *  @param value the proj4 string to set for the header
 *  @return LASError enum
*/
LAS_DLL LASError LASHeader_SetProj4(LASHeaderH hHeader, const char* value);
/** Returns the VLR record for the given index.  Use LASHeader_GetRecordsCount to 
 *  determine the number of VLR records available on the header.
 *  @param hHeader the LASHeaderH instance
 *  @param i the index starting from 0 of the VLR to fetch
 *  @return LASVLRH instance that models the Variable Length Record
*/
LAS_DLL LASVLRH LASHeader_GetVLR(const LASHeaderH hHeader, uint32_t i);
/** Deletes a VLR record from the header for the given index.
 *  @param hHeader the LASHeaderH instance
 *  @param index the index starting from 0 of the VLR to delete
 *  @return LASErrorEnum
*/
LAS_DLL LASError LASHeader_DeleteVLR(LASHeaderH hHeader, uint32_t index);
/** Adds a VLR record to the header. 
 *  @param hHeader the LASHeaderH instance
 *  @param hVLR the VLR to add to the header
 *  @return LASErrorEnum
*/
LAS_DLL LASError LASHeader_AddVLR(LASHeaderH hHeader, const LASVLRH hVLR);
/****************************************************************************/
/* Writer Operations                                                        */
/****************************************************************************/

/** Creates a new LASWriterH for write operations on LAS files.  The file may 
 *  be opened in either LAS_MODE_APPEND or LAS_MODE_WRITE, but the file cannot 
 *  be open by another other operations (another LASReaderH or LASWriterH).  
 *  @param filename The filename to open to write
 *  @param hHeader an opaque pointer to a LASHeaderH that will be written to 
 *  the file as part of the opening for write operation.
 *  @param mode a mode value to denote whether to open for write or append 
 *  operations.  Valid values are LAS_MODE_APPEND and LAS_MODE_WRITE.
*/
LAS_DLL LASWriterH LASWriter_Create(const char* filename, const LASHeaderH hHeader, int mode);
/** Writes a point to the file.  The location of where the point is writen is 
 *  determined by the mode the file is opened in, and what the last operation was.  
 *  For example, if the file was opened for append, the next point would be written 
 *  at the end of the file.  Likewise, if the file is opened in write mode, even 
 *  if the file already existed, the next WritePoint operation will happen at the 
 *  end of the header and all of the existing points in the file will be overwritten.
 *  @param hWriter opaque pointer to the LASWriterH instance
 *  @param hPoint the opaque LASPointH pointer to write
 *  @return LE_None if no error occurred during the write operation.
*/
LAS_DLL LASError LASWriter_WritePoint(const LASWriterH hWriter, const LASPointH hPoint);
/** Overwrites the header for the file represented by the LASWriterH.  It does 
 *  not matter if the file is opened for append or for write.
 *  @param hWriter opaque pointer to the LASWriterH instance
 *  @param hHeader LASHeaderH instance to write into the file
 *  @return LE_None if no error occurred during the operation.
*/

LAS_DLL LASError LASWriter_WriteHeader(const LASWriterH hWriter, const LASHeaderH hHeader);
/** Destroys the LASWriterH instance, effectively closing the file and performing 
 *  housekeeping operations.
 *  @param hWriter LASWriterH instance to close
*/
LAS_DLL void LASWriter_Destroy(LASWriterH hWriter);
/****************************************************************************/
/* GUID Operations                                                          */
/****************************************************************************/

/** Returns the GUID value for the header as an opaque LASGuidH pointer.
 *  @param hHeader the opaque pointer to the LASHeaderH
 *  @return the GUID value for the header as an opaque LASGuidH pointer.
*/
LAS_DLL LASGuidH LASHeader_GetGUID(const LASHeaderH hHeader);
/** Returns a new random GUID.
 *  @return a new random GUID
*/
LAS_DLL LASGuidH LASGuid_Create();
/** Creates a new GUID opaque pointer using the given string.  
 *  @param string A GUID string in the form "00000000-0000-0000-0000-000000000000"
 *  An example GUID might be something like '8388F1B8-AA1B-4108-BCA3-6BC68E7B062E'
 *  @return the GUID value as an opaque LASGuidH pointer.
*/
LAS_DLL LASGuidH LASGuid_CreateFromString(const char* string);
/** Destroys a GUID opaque pointer and removes it from the heap
 *  @param hId the GUID value to destroy as an opaque LASGuidH pointer.
*/
LAS_DLL void LASGuid_Destroy(LASGuidH hId);
/** Determines if two GUIDs are equal.
 *  @param hId1 the first GUID
 *  @param hId2 the second GUID
 *  @return 0 if false, 1 if true.  Use the LASError_GetLastError* methods to 
 *  determine if an error occured during the operation of this function.
*/
LAS_DLL int LASGuid_Equals(LASGuidH hId1, LASGuidH hId2);
/** Returns a string representation of the GUID opqaue pointer.  The caller 
 *  owns the string.
 *  @param hId the LASGuidH pointer
 *  @return a string representation of the GUID opaque pointer.
*/
LAS_DLL char* LASGuid_AsString(LASGuidH hId);
/****************************************************************************/
/* VLR Operations                                                           */
/****************************************************************************/

/** Creates a new VLR record
 *  @return a new VLR record
*/
LAS_DLL LASVLRH LASVLR_Create(void);
/** Destroys a VLR record and removes it from the heap
*/
LAS_DLL void LASVLR_Destroy(LASVLRH hVLR);
/** Returns the User Id for the VLR 
 *  @param hVLR the LASVLRH instance
 *  @return the User Id for the VLR
*/
LAS_DLL char* LASVLR_GetUserId(const LASVLRH hVLR);
/** Sets the User Id for the VLR
 *  @param hVLR the LASVLRH instance
 *  @param value the value to set for the User Id.  It will be clipped to fit 
 *  within 16 characters
 *  @return LASErrorEnum
*/
LAS_DLL LASError LASVLR_SetUserId(LASVLRH hVLR, const char* value);
/** Gets the description for the VLR
 *  @param hVLR the LASVLRH instance
 *  @return the description for the VLR
*/ 
LAS_DLL char* LASVLR_GetDescription(const LASVLRH hVLR);
/** Sets the description for the VLR
 *  @param hVLR the LASVLRH instance
 *  @param value the value to set for the description.  It will be clipped to fit 
 *  within 32 characters
 *  @return LASErrorEnum
*/
LAS_DLL LASError LASVLR_SetDescription(LASVLRH hVLR, const char* value);
/** Returns the record length of the data stored in the VLR
 *  @param hVLR the LASVLRH instance
 *  @return the record length of the data stored in the VLR
*/
LAS_DLL uint16_t LASVLR_GetRecordLength(const LASVLRH hVLR);
/** Sets the record length of the data stored in the VLR
 *  @param hVLR the LASVLRH instance
 *  @param value the length to set for the VLR data length
 *  @return LASErrorEnum
*/
LAS_DLL LASError LASVLR_SetRecordLength(LASVLRH hVLR, uint16_t value);
/** Gets the record id for the VLR
 *  @param hVLR the LASVLRH instance
 *  @return the record id for the VLR
*/
LAS_DLL uint16_t LASVLR_GetRecordId(const LASVLRH hVLR);
/** Sets the record id for the VLR
 *  @param hVLR the LASVLRH instance
 *  @param value the record id to set
 *  @return LASErrorEnum
*/
LAS_DLL LASError LASVLR_SetRecordId(LASVLRH hVLR, uint16_t value);