Utilities/otbliblas/csharp/dotnetLibLAS/LibLASCAPI.cs


        /** Sets the minimum values
        *  @param hHeader LASHeaderH instance
        *  @param x the x minimum
        *  @param y the y minimum
        *  @param z the z minimum
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetMin(LASHeaderH hHeader, double x, double y, double z);

        /** Return the maximum x value
        *  @param hHeader LASHeaderH instance
        *  @return the maximum x value
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetMaxX(LASHeaderH hHeader);

        /** Return the maximum y value
        *  @param hHeader LASHeaderH instance
        *  @return the maximum y value
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetMaxY(LASHeaderH hHeader);

        /** Return the maximum z value
        *  @param hHeader LASHeaderH instance
        *  @return the maximum z value
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetMaxZ(LASHeaderH hHeader);

        /** Sets the maximum values
        *  @param hHeader LASHeaderH instance
        *  @param x the x maximum
        *  @param y the y maximum
        *  @param z the z maximum
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetMax(LASHeaderH hHeader, double x, double y, double z);

        /** Returns the proj.4 string describing the spatial reference of the 
        *  header if it is available
        *  @param hHeader LASHeaderH instance
        *  @return the proj.4 string or NULL if none is available.  The caller
        *  owns the string.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASHeader_GetProj4(LASHeaderH hHeader);

        /** Sets the proj4 stirng describing the spatial reference of the header.
        *  @param hHeader LASHeaderH instance
        *  @param value the proj4 string to set for the header
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetProj4(LASHeaderH hHeader, String value);

        /** Returns the VLR record for the given index.  Use LASHeader_GetRecordsCount to 
        *  determine the number of VLR records available on the header.
        *  @param hHeader the LASHeaderH instance
        *  @param i the index starting from 0 of the VLR to fetch
        *  @return LASVLRH instance that models the Variable Length Record
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASVLRH LASHeader_GetVLR(LASHeaderH hHeader, UInt32 i);

        /** Deletes a VLR record from the header for the given index.
        *  @param hHeader the LASHeaderH instance
        *  @param index the index starting from 0 of the VLR to delete
        *  @return LASErrorEnum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_DeleteVLR(LASHeaderH hHeader, UInt32 index);

        /** Adds a VLR record to the header. 
        *  @param hHeader the LASHeaderH instance
        *  @param hVLR the VLR to add to the header
        *  @return LASErrorEnum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_AddVLR(LASHeaderH hHeader, LASVLRH hVLR);

        /****************************************************************************/
        /* Writer Operations                                                        */
        /****************************************************************************/

        /** Creates a new LASWriterH for write operations on LAS files.  The file may 
        *  be opened in either LAS_MODE_APPEND or LAS_MODE_WRITE, but the file cannot 
        *  be open by another other operations (another LASReaderH or LASWriterH).  
        *  @param filename The filename to open to write
        *  @param hHeader an opaque pointer to a LASHeaderH that will be written to 
        *  the file as part of the opening for write operation.
        *  @param mode a mode value to denote whether to open for write or append 
        *  operations.  Valid values are LAS_MODE_APPEND and LAS_MODE_WRITE.
        */

        [DllImport(DLL_LAS_VERSION)]
        public static extern LASWriterH LASWriter_Create(String filename, LASHeaderH hHeader, int mode);

        /** Writes a point to the file.  The location of where the point is writen is 
        *  determined by the mode the file is opened in, and what the last operation was.  
        *  For example, if the file was opened for append, the next point would be written 
        *  at the end of the file.  Likewise, if the file is opened in write mode, even 
        *  if the file already existed, the next WritePoint operation will happen at the 
        *  end of the header and all of the existing points in the file will be overwritten.
        *  @param hWriter opaque pointer to the LASWriterH instance
        *  @param hPoint the opaque LASPointH pointer to write
        *  @return LE_None if no error occurred during the write operation.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASWriter_WritePoint(LASWriterH hWriter, LASPointH hPoint);

        /** Overwrites the header for the file represented by the LASWriterH.  It does 
        *  not matter if the file is opened for append or for write.
        *  @param hWriter opaque pointer to the LASWriterH instance
        *  @param hHeader LASHeaderH instance to write into the file
        *  @return LE_None if no error occurred during the operation.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASWriter_WriteHeader(LASWriterH hWriter, LASHeaderH hHeader);

        /** Destroys the LASWriterH instance, effectively closing the file and performing 
        *  housekeeping operations.
        *  @param hWriter LASWriterH instance to close
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern void LASWriter_Destroy(LASWriterH hWriter);

        /****************************************************************************/
        /* GUID Operations                                                          */
        /****************************************************************************/

        /** Returns the GUID value for the header as an opaque LASGuidH pointer.
        *  @param hHeader the opaque pointer to the LASHeaderH
        *  @return the GUID value for the header as an opaque LASGuidH pointer.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASGuidH LASHeader_GetGUID(LASHeaderH hHeader);

        /** Returns a new random GUID.
        *  @return a new random GUID
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASGuidH LASGuid_Create();

        /** Creates a new GUID opaque pointer using the given string.  
        *  @param string A GUID string in the form "00000000-0000-0000-0000-000000000000"
        *  An example GUID might be something like '8388F1B8-AA1B-4108-BCA3-6BC68E7B062E'
        *  @return the GUID value as an opaque LASGuidH pointer.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASGuidH LASGuid_CreateFromString(String string_);

        /** Destroys a GUID opaque pointer and removes it from the heap
        *  @param hId the GUID value to destroy as an opaque LASGuidH pointer.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern void LASGuid_Destroy(LASGuidH hId);

        /** Determines if two GUIDs are equal.
        *  @param hId1 the first GUID
        *  @param hId2 the second GUID
        *  @return 0 if false, 1 if true.  Use the LASError_GetLastError* methods to 
        *  determine if an error occured during the operation of this function.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern int LASGuid_Equals(LASGuidH hId1, LASGuidH hId2);

        /** Returns a string representation of the GUID opqaue pointer.  The caller 
        *  owns the string.
        *  @param hId the LASGuidH pointer
        *  @return a string representation of the GUID opaque pointer.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASGuid_AsString(LASGuidH hId);

        /****************************************************************************/
        /* VLR Operations                                                           */
        /****************************************************************************/

        /** Creates a new VLR record
        *  @return a new VLR record
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASVLRH LASVLR_Create();

        /** Destroys a VLR record and removes it from the heap
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern void LASVLR_Destroy(LASVLRH hVLR);

        /** Returns the User Id for the VLR 
        *  @param hVLR the LASVLRH instance
        *  @return the User Id for the VLR
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASVLR_GetUserId(LASVLRH hVLR);

        /** Sets the User Id for the VLR
        *  @param hVLR the LASVLRH instance
        *  @param value the value to set for the User Id.  It will be clipped to fit 
        *  within 16 characters
        *  @return LASErrorEnum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASVLR_SetUserId(LASVLRH hVLR, String value);

        /** Gets the description for the VLR
        *  @param hVLR the LASVLRH instance
        *  @return the description for the VLR
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASVLR_GetDescription(LASVLRH hVLR);

        /** Sets the description for the VLR
        *  @param hVLR the LASVLRH instance
        *  @param value the value to set for the description.  It will be clipped to fit 
        *  within 32 characters
        *  @return LASErrorEnum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASVLR_SetDescription(LASVLRH hVLR, String value);

        /** Returns the record length of the data stored in the VLR
        *  @param hVLR the LASVLRH instance
        *  @return the record length of the data stored in the VLR
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASVLR_GetRecordLength(LASVLRH hVLR);

        /** Sets the record length of the data stored in the VLR
        *  @param hVLR the LASVLRH instance
        *  @param value the length to set for the VLR data length
        *  @return LASErrorEnum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASVLR_SetRecordLength(LASVLRH hVLR, UInt16 value);

        /** Gets the record id for the VLR
        *  @param hVLR the LASVLRH instance
        *  @return the record id for the VLR
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASVLR_GetRecordId(LASVLRH hVLR);

        /** Sets the record id for the VLR
        *  @param hVLR the LASVLRH instance
        *  @param value the record id to set
        *  @return LASErrorEnum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASVLR_SetRecordId(LASVLRH hVLR, UInt16 value);
